--- a/index.html
+++ b/index.html
@@ -35,6 +35,60 @@
                 <button>İNDİ AL</button>
             </div>
         </section>
+
+        <!--
+        <section class="categories">
+            <p class="section-header">Kateqoriyalar</p>
+            <div class="category-box">
+                <a href="#" class="category-item">
+                    <img src="" alt="">
+                    <p class="category-name">Komputerlər</p>
+                </a>
+                <a href="#" class="category-item">
+                    <img src="" alt="">
+                    <p class="category-name">Telefonlar</p>
+                </a>
+                <a href="#" class="category-item">
+                    <img src="" alt="">
+                    <p class="category-name">Komputer Aksesuarları</p>
+                </a>
+                <a href="#" class="category-item">
+                    <img src="" alt="">
+                    <p class="category-name">Telefon Aksesuarları</p>
+                </a>
+            </div>
+        </section>
+        -->
+
+        <section class="itms-for-you">
+            <p class="section-header">Sənin üçün</p>
+            <div class="sell-item-box">
+                <a href="#" class="sell-item">
+                    <img src="product-images/tm-dg-kot-1114-nb-2720_1.png" alt="">
+                    <div class="product-info">
+                        <div class="info-1-line">
+                            <div class="brand-name">Asus</div>
+                            <div class="reviews">
+                                <i class="fa-solid fa-star"></i>
+                                <div class="reviews-point">4.8</div>
+                                <div class="reviews-count">(26)</div>
+                            </div>
+                        </div>
+                        <div class="product-name">Notbuk Asus ROG Zephyrus G16 OLED GU605MY-QR064W (90NR0IQ5-M00320)</div>
+                        <div class="price">8.499,99 Azn</div>
+                    </div>
+                </a>
+                <div class="sell-item">
+                    <img src="" alt="">
+                </div>
+                <div class="sell-item">
+                    <img src="" alt="">
+                </div>
+                <div class="sell-item">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
     </div>
 
     <script src="script.js"></script>
