--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <button class="header-cart-btn">
                     <i class="fa-light fa-cart-shopping"></i>
                 </button>
-                <button class="header-menu-btn">
+                <label for="menu-toggle" class="header-menu-btn">
                     <i class="fa-light fa-bars"></i>
-                </button>
+                </label>
             </div>
         </header>
         <section class="banner1">
@@ -74,7 +74,8 @@
                                 <div class="reviews-count">(26)</div>
                             </div>
                         </div>
-                        <div class="product-name">Notbuk Asus ROG Zephyrus G16 OLED GU605MY-QR064W (90NR0IQ5-M00320)</div>
+                        <div class="product-name">Notbuk Asus ROG Zephyrus G16 OLED GU605MY-QR064W (90NR0IQ5-M00320)
+                        </div>
                         <div class="price">8.499,99 Azn</div>
                     </div>
                 </a>
@@ -89,6 +90,62 @@
                 </div>
             </div>
         </section>
+
+        <div class="menu" id="menu">
+            <input type="checkbox" name="menu-toggle" id="menu-toggle" checked>
+            <label for="menu-toggle" class="menu-left"></label>
+            <div class="menu-main">
+                <div class="menu-profile">
+                    <img src="assets/logo.png">
+                    <div class="menu-profile-right">
+                        <div class="user-name-surname">
+                            <p>Fərid Hümbətov</p>
+                            <button><i class="fa-light fa-user-pen"></i></button>
+                        </div>
+                        <div class="user-id">
+                            <p>ID: 68147391</p>
+                            <button><i class="fa-light fa-copy"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <ul class="menu-items">
+                    <li>
+                        <a href="#">
+                            <i class="fa-solid fa-list"></i>
+                            <p>Kategoriyalar</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-light fa-bring-forward"></i>
+                            <p>Kategoriyalar</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-light fa-icons"></i>
+                            <p>Kategoriyalar</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-light fa-cubes-stacked"></i>
+                            <p>Kategoriyalar</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-light fa-sack-xmark"></i>
+                            <p>Kategoriyalar</p>
+                        </a>
+                    </li>
+                </ul>
+                <a href="#" class="menu-settings">
+                    <i class="fa-light fa-gear"></i>
+                    <p>Tənzimləmələr</p>
+                </a>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
