--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </section>
 
         <div class="menu" id="menu">
-            <input type="checkbox" name="menu-toggle" id="menu-toggle" checked>
+            <input type="checkbox" name="menu-toggle" id="menu-toggle">
             <label for="menu-toggle" class="menu-left"></label>
             <div class="menu-main">
                 <div class="menu-profile">
