--- a/index.html
+++ b/index.html
@@ -104,6 +104,91 @@
             </div>
         </section>
 
+        <footer>
+            <div class="footer-logo">
+                <img src="assets/logo-wh-removebg-preview.png" alt="">
+                <p class="logo-name">DIGIPORT</p>
+            </div>
+            <div class="footer-social">
+                <a href="#" class="footer-social-item">
+                    <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="1.5"
+                        viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#fff">
+                        <path
+                            d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                            stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path
+                            d="M3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16Z"
+                            stroke="#fff" stroke-width="1.5"></path>
+                        <path d="M17.5 6.51L17.51 6.49889" stroke="#fff" stroke-width="1.5" stroke-linecap="round"
+                            stroke-linejoin="round"></path>
+                    </svg>
+                </a>
+                <a href="#" class="footer-social-item">
+                    <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="1.5"
+                        viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#fff">
+                        <path
+                            d="M21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8Z"
+                            stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M11 21C11 18 11 15 11 12C11 9.8125 11.5 8 15 8" stroke="#fff" stroke-width="1.5"
+                            stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M9 13H11H15" stroke="#fff" stroke-width="1.5" stroke-linecap="round"
+                            stroke-linejoin="round"></path>
+                    </svg>
+                </a>
+                <a href="#" class="footer-social-item">
+                    <?xml version="1.0" encoding="UTF-8"?><svg width="24px" height="24px" stroke-width="1.5"
+                        viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" color="#fff">
+                        <path
+                            d="M21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8Z"
+                            stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path
+                            d="M10 12C8.34315 12 7 13.3431 7 15C7 16.6569 8.34315 18 10 18C11.6569 18 13 16.6569 13 15V6C13.3333 7 14.6 9 17 9"
+                            stroke="#fff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </a>
+            </div>
+            <div class="footer-section footer-company-info">
+                <p class="footer-section-header">Company</p>
+                <div class="company-info company-location">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p>Azerbaijan, Baku, Lev Tolstoy 223E</p>
+                </div>
+                <div class="company-info company-mail">
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>info@digiport.com</p>
+                </div>
+                <div class="company-info company-phone">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+994128145414</p>
+                </div>
+            </div>
+            <div class="footer-links">
+                <div class="footer-link-group">
+                    <div class="footer-link-header">Platform</div>
+                    <a href="#" class="footer-link">Contact Us</a>
+                    <a href="#" class="footer-link">Partners</a>
+                    <a href="#" class="footer-link">About Us</a>
+                    <a href="#" class="footer-link">Insights</a>
+                </div>
+                <div class="footer-link-group">
+                    <div class="footer-link-header">Resources</div>
+                    <a href="#" class="footer-link">Careers</a>
+                    <a href="#" class="footer-link">Customer Portal</a>
+                    <a href="#" class="footer-link">Other Resources</a>
+                    <a href="private.html" class="footer-link">Resources</a>
+                </div>
+            </div>
+            <div class="footer-other-links">
+                <a href="#">Term of use</a>
+                <a href="#">Privacy policy</a>
+                <a href="#">Coocies setting</a>
+            </div>
+            <div class="footer-rights">
+                <p>Copyright &copy; 2025</p>
+                <p>Digiport  |  All Rights Reserved.</p>
+            </div>
+        </footer>
+
         <div class="menu" id="menu">
             <input type="checkbox" name="menu-toggle" id="menu-toggle">
             <label for="menu-toggle" class="menu-left"></label>
